NEW: Added 'locales' tag to plays.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 - name: 'Install locales'
+  tags: 'locales'
   sudo: 'yes'
   apt: >
     pkg=locales
@@ -7,6 +8,7 @@
     update_cache=true
 
 - name: 'Install language packs'
+  tags: 'locales'
   sudo: 'yes'
   apt: >
     pkg={{ item }}
@@ -16,15 +18,18 @@
   register: 'locale_languages'
 
 - name: 'Reconfigure dpkg'
+  tags: 'locales'
   sudo: 'yes'
   command: 'dpkg-reconfigure locales'
   when: 'locale_languages.changed'
 
 - name: 'Detect locale configuration file'
+  tags: 'locales'
   stat: 'path=/var/lib/locales/supported.d/local'
   register: 'locale_configuration'
 
 - name: 'Create locale configuration file'
+  tags: 'locales'
   sudo: 'yes'
   file: >
     path=/var/lib/locales/supported.d/local
@@ -32,12 +37,15 @@
   when: 'not locale_configuration.stat.exists'
 
 - name: 'Configure system locale'
+  tags: 'locales'
   sudo: 'yes'
   locale_gen: >
     name={{ locale }}.{{ encoding }}
+      tags: 'locales'
     state=present
 
 - name: 'Export LC_ALL environment variable in ~/.profile'
+  tags: 'locales'
   lineinfile: >
     dest=/home/{{ ansible_ssh_user }}/.profile
     create=yes
