--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 locale: 'en_AU'
 encoding: 'UTF-8'
+locales_user: '{{ ansible_ssh_user }}'
 locale_language_packs:
   - 'language-pack-en'
   - 'language-pack-en-base'
