--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -51,23 +51,24 @@
     create=yes
     line="export LC_ALL={{ locale }}.{{ encoding }}"
 
-- name: 'Group by Distribution'
-  hosts: 'all'
+- name: Group by Distribution
+  hosts: all
   tasks:
-    - group_by: 'key=${ansible_distribution}'
+    - group_by: key=${ansible_distribution}
 
-- name: 'Set Time Zone'
+- name: Set Time Zone
+  hosts: Ubuntu
+  gather_facts: False
   tasks:
-    - name: 'Set timezone variables'
-      copy: >
-        content='Etc/UTC'
-        dest=/etc/timezone
-        owner=root
-        group=root
-        mode=0644
-        backup=yes
+    - name: Set timezone variables
+      copy: content='America/Los_Angeles'
+            dest=/etc/timezone
+            owner=root
+            group=root
+            mode=0644
+            backup=yes
       notify:
-        - 'update timezone'
+        - update timezone
   handlers:
-    - name: 'update timezone'
-      command: 'dpkg-reconfigure --frontend noninteractive tzdata'
+    - name: update timezone
+      command: dpkg-reconfigure --frontend noninteractive tzdata
