--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 galaxy_info:
   author: 'Rohan Liston'
   description: 'Installs the specified locales and language packs.'
-  company: 'SSIL'
+  company: 'DSTIL'
   license: 'BSD'
   min_ansible_version: 1.6
   platforms:
